tsliceh/kubernetes/tdsh.yaml
# POD with 3dslicer-hub and nginx to redirect to the different 3dslicer hub containers
# - it initializes an empty nginx.conf file in a volumeMount (temporary fs to share files between containers of the POD)
apiVersion: v1
kind: Pod
metadata:
  name: proxy-shub
  labels:
    app: shub
    # Label used by get_container_ip. The value is defined in "env" with TDSLICERHUB_NAME variable
    app-user: tdslicerhub-3dslicer-hub
spec:
  serviceAccountName: internal-kubectl
  restartPolicy: OnFailure
  volumes:
    - name: nginx-conf
      emptyDir: {}
  containers:
    - name: nginx-container
      image: opendx/nginx:latest
      imagePullPolicy: Never
      ports:
      - containerPort: 80
      volumeMounts:
        - mountPath: /etc/nginx
          name: nginx-conf
    - name: 3dslicer-hub
      image: opendx/tslicerh:latest
      imagePullPolicy: Never
      ports:
      - containerPort: 8080
      volumeMounts:
        - mountPath: /app/proxy
          name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: shub
  ports:
  - name: http
    nodePort: 30080
    port: 80
    targetPort: 80
  type: NodePort
#---
#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: nfs-pv
#spec:
#  capacity:
#    storage: 10Gi
#  accessModes:
#    - ReadWriteMany
#  persistentVolumeReclaimPolicy: Retain
#  nfs:
#    # TODO Change to the path and host name (as seen by k8s master)
#    path:
#    server:
