tsliceh/kubernetes/tdsh_teide.yaml
# POD with 3dslicer-hub and nginx to redirect to the different 3dslicer hub containers
# - it initializes an empty nginx.conf file in a volumeMount (temporary fs to share files between containers of the POD)
apiVersion: v1
kind: Pod
metadata:
  name: proxy-shub
  labels:
    app: shub
    # Label used by get_container_ip. The value is defined in "env" with T4HUB_HAME variable
    app-user: t4hub-transformer4-hub
spec:
  # Force master-node (TEIDE HPC)
  nodeName: opendx2
  serviceAccountName: internal-kubectl
  restartPolicy: OnFailure
  volumes:
    - name: nginx-conf
      emptyDir: {}
  containers:
    - name: 3dslicer-hub
      image: localhost:5000/opendx28/tslicerh:latest
      imagePullPolicy: Always
      ports:
      - containerPort: 8080
      volumeMounts:
        - mountPath: /app/proxy
          name: nginx-conf
    - name: nginx-container
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      image: nginx:latest
      imagePullPolicy: Always
      ports:
      - containerPort: 80
      volumeMounts:
        - mountPath: /etc/nginx
          name: nginx-conf

#---
#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: nfs-pv
#spec:
#  capacity:
#    storage: 10Gi
#  accessModes:
#    - ReadWriteMany
#  persistentVolumeReclaimPolicy: Retain
#  nfs:
#    # TODO Change to the path and host name (as seen by k8s master)
#    path:
#    server:


---
# Cluster service for proxy-shub pod. This Cluster svc will be not accessible from outside it is ment to be reached
#  internally by ingress
apiVersion: v1
kind: Service
metadata:
  name: shub-svc-cluster
spec:
  selector:
    app: shub
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shub
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - 3dslicerhub.medtec4susdev.org
    secretName: myapp-cert
  ingressClassName: traefik
  rules:
    - host: 3dslicerhub.medtec4susdev.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: shub-svc-cluster
              port:
                number: 80
                
---
# ldap deplyment manifest

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-deployment
  labels:
    app: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
        - name: ldap
          image: osixia/openldap:stable
          args: ["--copy-service", "--loglevel","debug"]
          volumeMounts:
            - name: ldap-data
              mountPath: /var/lib/ldap
            - name: ldap-config
              mountPath: /etc/ldap/slapd.d
            - name: ldap-certs
              mountPath: /container/service/slapd/assets/certs
            - name: container-run
              mountPath: /container/run
            - name: ldap-users
              mountPath: /home/users
          ports:
            - containerPort: 389
              name: openldap
            - containerPort: 636
              name: openldapssl
      volumes:
      - hostPath:
          path: /mnt/opendx28/ldap/data/slapd/database
          type: ""
        name: ldap-data
      - hostPath:
          path: /mnt/opendx28/ldap/data/slapd/config
          type: ""
        name: ldap-config
      - hostPath:
          path: /mnt/opendx28/ldap/users
          type: ""
        name: ldap-users
      - hostPath: # esto debería ser un secret
          path: /mnt/opendx28/ldap/certs
          type: ""
        name: ldap-certs
      - name: container-run
        emptyDir: {}
---
# ldap cluster

apiVersion: v1
kind: Service
metadata:
  name: tdslicerhub-openldap
spec:
  selector:
    app: ldap
  ports:
    - protocol: TCP
      port: 389
  type: ClusterIP
---
# PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:latest
        ports:
        - containerPort: 5432
---
# Expose PostgreSQL to the cluster
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
